# fasthttp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  benchmark.py  example_sync.py  pyproject.toml  pytest.ini  setup.py  test.py  test_sync_async.py  test_websocket.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release.yml
fasthttp/: __init__.py  async_client.py  async_connection.py  async_pool.py  auth.py  client.py  connection.py  cookies.py  errors.py  formdata.py  http2.py  logging.py  pool.py  request.py  response.py  retry.py  sync.py  timeouts.py  websocket.py
fasthttp/wsproto/: __init__.py  handshake.py  utilities.py
maxhttp/: __init__.py  _version.py  client.py  errors.py  http2.py  logging.py  pool.py  response.py  retry.py  sync.py  websocket.py
maxhttp/wsproto/: __init__.py
myenv/: pyvenv.cfg
tests/: test_client.py  test_end_to_end.py
