[project]
name = "pyfasthttp"
version = "0.1.0"
description = "Lightweight sync/async HTTP client with pooling built on h11."
authors = [{ name = "Shayan Heidari" }]
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
    "h11>=0.14.0",
]
license = { file = "LICENSE" }
keywords = ["http", "client", "async", "sync", "http1.1", "requests" ]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
brotli = ["brotli>=1.0.9"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "brotli>=1.0.9", "ruff>=0.17.0", "mypy>=1.7"]

[project.urls]
Homepage = "https://github.com/shayanheidari01/fasthttp"
Repository = "https://github.com/shayanheidari01/fasthttp"

[tool.setuptools.packages.find]
include = ["fasthttp*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
disallow_untyped_calls = false
ignore_missing_imports = true
